# diy-pod

./: .gitignore  CMakeLists.txt  README
Docs/: 1.21.24.md  12.10.24 Log.md
assets/: SF_Compact.c
bootloader/: CMakeLists.txt
bootloader/include/: memory_map.h
bootloader/linker/: bootloader.ld  memory_map.ld
bootloader/src/: bootloader.c
src/: metadata_storage  metadata_storage.c  metadata_storage.h  tag_map  tag_map.c  tag_map.h  tag_ripper  tag_ripper.c  tag_ripper.h  test.ino
src/structs/: hash.h  intern_pool.c  intern_pool.h  map.c  map.h  tag  tag.c  tag.h
